Edited Documentation to account for newest changes
